fix white space on slide

--- a/styles.css
+++ b/styles.css
@@ -1,30 +1,9 @@
-/* Slideshow  */
-
 /* Reset default margin and padding */
 body, html {
     margin: 0;
     padding: 0;
+    height: 100%;
 }
-
-/* old nav styling
-.navbar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background-color: #333;
-    color: white;
-    text-align: center;
-    padding: 10px 0;
-}
-
-.navbar a {
-    text-decoration: none;
-    color: white;
-    padding: 10px 20px;
-}
- */
-
 
 /* Navbar styling */
 .navbar {
@@ -80,36 +59,23 @@ body, html {
 
 /* Anime Slider */
 .anime-slider {
-    margin-top: 60px; /* Adjust according to navbar height */
+    margin-top: 60px;
     text-align: center;
     overflow: hidden; /* Hide overflow content */
+    height: calc(100vh - 60px); 
+    box-sizing: border-box; /* Include padding and border in height calculation */
 }
 
-.slide img {
-    max-width: 100%;
-    height: auto;
-    object-fit: cover;
+.anime-slider .slide {
+    width: 100%; 
 }
 
-
-/* Slideshow container */
-.anime-slider {
-    position: relative;
-    width: 80%; /* Adjust width as needed */
-    max-width: 800px;
-    margin: 80px auto 20px; /* Adjust top and bottom margins as needed */
-    overflow: hidden;
-    border-radius: 10px;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-     min-height: 300px;
-}
-
-/* Slide images */
 .slide img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
+
 
 /* Controls container */
 .controls {
